--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,17 @@ plugins {
 	id 'org.springframework.boot' version '2.5.2'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id "org.sonarqube" version "3.3"
 }
 
+sonarqube {
+  properties {
+    property "sonar.projectKey", "uirakulesza_Goal-List-CI-CD"
+    property "sonar.organization", "uirakulesza-1"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
+  
 group = 'br.ufrn'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
